--- a/packages/browser-common/src/styles/component/_price.scss
+++ b/packages/browser-common/src/styles/component/_price.scss
@@ -31,6 +31,7 @@
 
         &--coolstuffinc {
             background-color: $color-vendor-coolstuffinc;
+            color: $black;
         }
     }
 }
